--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container navbar">
+            <div class="logo_main"><img src="./assets/images/Snobella.png" alt="logo"></div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search product">
+            </div>
+            <div class="pages">
+                <ul>
+                    <li>
+                        <img src="./assets/images/avatar 1.png" alt="">
+                        <a href="">Sign Up</a>
+                    </li>
+                    <li>
+                        <img src="./assets/images/heart (2).png" alt="">
+                        <a href="">Wishlist</a>
+                    </li>
+                    <li>
+                        <img src="./assets/images/bag.png" alt="">
+                        <a href="">Basket</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
