minor adjustment, register

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- FONT AWESOME CDN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
@@ -21,7 +21,6 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/reset.css">
     <title>Home</title>
   </head>
   <body>
@@ -48,11 +47,7 @@
     <div class="container">
       <div class="row">
         <nav class="mynavbar col-lg-12 col-md-12 col-sm-12">
-          <div class="logo">
-            <a href="index.html"
-              ><img src="./assets/images/Snobella.png" alt=""
-            /></a>
-          </div>
+          <div class="logo"><a href="index.html"><img src="./assets/images/Snobella.png" alt=""></a></div>
 
           <div class="search-box">
             <input
@@ -66,20 +61,16 @@
             <ul class="search-results"></ul>
           </div>
 
-          <!-- <ul class="nav_list">
-            <li class="nav_list-item"><a href="./admin.html">Admin</a></li>
-          </ul> -->
-          <div class="wrapper" style="display: flex; align-items: center;">
+          <div class="wrapper">
             <!-- <button class="username">Username</button> -->
             <div class="dropdown">
-              <button style="display: flex; gap: 5px; align-items: center;"
+              <button
                 class="btn btn-white newB"
                 type="button"
-                id="userDropdown"
                 data-bs-toggle="dropdown"
               >
-                <i class="fa-regular fa-user fa-xl"></i>
-                Sign Up
+                <i class="fa-regular fa-user test"></i>
+                
               </button>
               <ul class="dropdown-menu">
                 <li>
@@ -98,33 +89,16 @@
                 </li>
               </ul>
             </div>
-            <div>
-                <a style="display: flex; align-items: center; gap: 5px;" href="wishlist.html"
-                ><i class="fa-regular fa-heart fa-xl"></i
-                >Wishlist</a
-              >
-            </div>
-            <div>
-                <a style="display: flex; align-items: center; gap: 5px;" href="basket.html" class="basketIcon">
-                    <img src="./assets/icons/bag (1).png" alt="">
-                    Basket</a
-                  >
-            </div>
+            <a href="wishlist.html"
+              ><i class="fa-regular fa-heart wishlistpageicon font"></i>Wishlist</a
+            >
+            <a href="basket.html" class="basketIcon">
+              <i class="fa-solid fa-cart-shopping basketpageicon font"></i>
+              <sup>0</sup>
+              Basket</a
+            >
           </div>
         </nav>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="products">
-            <div>Evening bags</div>
-            <div>Shoulder bag</div>
-            <div>Backpack</div>
-            <div>Handbag</div>
-            <div>Postman bag</div>
-            <div>Belt bags</div>
-          </div>
-        </div>
       </div>
 
       <!-- !filter -->
@@ -152,29 +126,27 @@
     </div>
 
     <div class="sliderContainer">
-      <div class="slides">
-        <div class="slide">
+      <div class="slider">
+        <div class="slide" style="background-color: #FFE2E0;">
           <div class="container">
             <div class="start col-lg-12 col-md-12 col-sm-12">
-              <div class="row">
-                <div class="main col-lg-6 col-md-12 col-sm-12">
-                  <span>30% off</span>
-                  <h1>Handbag products</h1>
-                  <p>
-                    It is a long established fact that a reader will be
-                    distracted by the readable content expound the actual
-                    teachings of the great explorer
-                  </p>
-                  <br /><br /><br />
-                  <button>Shop now</button>
-                </div>
-                <div class="bagsIMG col-lg-6 col-md-12 col-sm-12">
-                  <img
-                    class="womBagImg"
-                    src="./assets/images/7771326b48a2887aa224f1621090d07b 1.png"
-                    alt=""
-                  />
-                </div>
+              <div class="main col-lg-6 col-md-12 col-sm-12">
+                <span>40% off</span>
+                <h1>Backpack products</h1>
+                <p>
+                  It is a long established fact that a reader will be distracted
+                  by the readable content expound the actual teachings of the
+                  great explorer
+                </p>
+                <br /><br /><br />
+                <button>Shop now</button>
+              </div>
+              <div class="bagsIMG col-lg-6 col-md-12 col-sm-12">
+                <img
+                  class="secImg"
+                  src="./assets/images/5652baba89f40da1967f408bcdb1ee23.png"
+                  alt=""
+                />
               </div>
             </div>
           </div>
@@ -451,15 +423,12 @@
       </section>
     </footer>
 
-    <!-- TOASTIFY -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/toastify-js"
     ></script>
-    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <!-- SCRIPTS -->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
