--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
     />
-    <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- TOASTIFY -->
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Home</title>
   </head>
@@ -61,7 +57,11 @@
             <ul class="search-results"></ul>
           </div>
 
+          <!-- <ul class="nav_list">
+            <li class="nav_list-item"><a href="./admin.html">Admin</a></li>
+          </ul> -->
           <div class="wrapper">
+            <a href="./admin.html" class="adminClass">Admin</a>
             <!-- <button class="username">Username</button> -->
             <div class="dropdown">
               <button
@@ -101,6 +101,19 @@
         </nav>
       </div>
 
+      <div class="container">
+        <div class="row">
+          <div class="products">
+            <div>Evening bags</div>
+            <div>Shoulder bag</div>
+            <div>Backpack</div>
+            <div>Handbag</div>
+            <div>Postman bag</div>
+            <div>Belt bags</div>
+          </div>
+        </div>
+      </div>
+
       <!-- !filter -->
 
       <!-- <div class="row">
@@ -126,8 +139,35 @@
     </div>
 
     <div class="sliderContainer">
-      <div class="slider">
-        <div class="slide" style="background-color: #FFE2E0;">
+      <div class="slides">
+        <div class="slide">
+          <div class="container">
+            <div class="start col-lg-12 col-md-12 col-sm-12">
+              <div class="row">
+                <div class="main col-lg-6 col-md-12 col-sm-12">
+                  <span>30% off</span>
+                  <h1>Handbag products</h1>
+                  <p>
+                    It is a long established fact that a reader will be
+                    distracted by the readable content expound the actual
+                    teachings of the great explorer
+                  </p>
+                  <br /><br /><br />
+                  <button>Shop now</button>
+                </div>
+                <div class="bagsIMG col-lg-6 col-md-12 col-sm-12">
+                  <img
+                    class="womBagImg"
+                    src="./assets/images/7771326b48a2887aa224f1621090d07b 1.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="slide">
           <div class="container">
             <div class="start col-lg-12 col-md-12 col-sm-12">
               <div class="main col-lg-6 col-md-12 col-sm-12">
