--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     <div class="container">
       <div class="row">
         <nav class="mynavbar col-lg-12 col-md-12 col-sm-12">
-          <div class="logo"><a href="index.html"><img src="./assets/images/Snobella.png" alt=""></a></div>
+          <div class="logo">
+            <a href="index.html"
+              ><img src="./assets/images/Snobella.png" alt=""
+            /></a>
+          </div>
 
           <div class="search-box">
             <input
@@ -56,13 +60,7 @@
             </button>
             <ul class="search-results"></ul>
           </div>
-
-          <!-- <ul class="nav_list">
-            <li class="nav_list-item"><a href="./admin.html">Admin</a></li>
-          </ul> -->
           <div class="wrapper">
-            <a href="./admin.html" class="adminClass">Admin</a>
-            <!-- <button class="username">Username</button> -->
             <div class="dropdown">
               <button
                 class="btn btn-white newB"
@@ -70,7 +68,6 @@
                 data-bs-toggle="dropdown"
               >
                 <i class="fa-regular fa-user test"></i>
-                
               </button>
               <ul class="dropdown-menu">
                 <li>
@@ -81,16 +78,14 @@
                 <li>
                   <a class="dropdown-item login" href="login.html">Login</a>
                 </li>
-                <!-- <li>
-                  <a class="dropdown-item  d-none" href="wishlist.html">Favorites</a>
-                </li> -->
                 <li>
                   <a class="dropdown-item logout d-none" href="#">Logout</a>
                 </li>
               </ul>
             </div>
             <a href="wishlist.html"
-              ><i class="fa-regular fa-heart wishlistpageicon font"></i>Wishlist</a
+              ><i class="fa-regular fa-heart wishlistpageicon font"></i
+              >Wishlist</a
             >
             <a href="basket.html" class="basketIcon">
               <i class="fa-solid fa-cart-shopping basketpageicon font"></i>
@@ -113,29 +108,6 @@
           </div>
         </div>
       </div>
-
-      <!-- !filter -->
-
-      <!-- <div class="row">
-        <div class="control-panel">
-          <div>
-            <button class="btn btn-primary az" type="button">A-Z</button>
-            <button class="btn btn-primary za" type="button">Z-A</button>
-          </div>
-          <div class="search-box">
-            <input placeholder="search..." type="text" class="search-input" />
-            <button type="" class="btn btn-success search-btn">Search</button>
-          </div>
-          <div>
-            <button class="btn btn-info low-to-high" type="button">
-              Low-to-High
-            </button>
-            <button class="btn btn-info high-to-low" type="button">
-              High-to-LoW
-            </button>
-          </div>
-        </div>
-      </div> -->
     </div>
 
     <div class="sliderContainer">
@@ -263,110 +235,8 @@
     <section id="products">
       <div class="container">
         <div class="row">
-          <!-- !saxla -->
-          <div class="viewCard">
-            <!-- <div class="card slice">
-            <i class="fa-regular fa-heart card-heart"></i>
-            <div class="card-image">
-              <img
-                src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
-              />
-            </div>
-            <div class="starArea">
-              <i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i>
-            </div>
-            <div class="card-content">
-              <h2 class="card-title">Fjallraven - Foldsack No. 1 Ba ...</h2>
-              <div class="card-footer">
-                <span class="card-price">$109.95</span>
-                <div class="card-rating">
-                  <span>3.9</span><span>(120)</span>
-                </div>
-              </div>
-            </div>
-            <button class="btn btn-primary add-to-cart">Add to card</button>
-          </div>
-          <div class="card slice">
-            <i class="fa-regular fa-heart card-heart"></i>
-            <div class="card-image">
-              <img
-                src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-              />
-            </div>
-            <div class="starArea">
-              <i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i>
-            </div>
-            <div class="card-content">
-              <h2 class="card-title">Mens Casual Premium Slim Fit T ...</h2>
-              <div class="card-footer">
-                <span class="card-price">$22.3</span>
-                <div class="card-rating">
-                  <span>4.1</span><span>(259)</span>
-                </div>
-              </div>
-            </div>
-            <button class="btn btn-primary add-to-cart">Add to card</button>
-          </div>
-          <div class="card slice">
-            <i class="fa-regular fa-heart card-heart"></i>
-            <div class="card-image">
-              <img
-                src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
-              />
-            </div>
-            <div class="starArea">
-              <i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i
-              ><i class="fa-solid fa-star starCard"></i>
-            </div>
-            <div class="card-content">
-              <h2 class="card-title">Mens Cotton Jacket ...</h2>
-              <div class="card-footer">
-                <span class="card-price">$55.99</span>
-                <div class="card-rating">
-                  <span>4.7</span><span>(500)</span>
-                </div>
-              </div>
-            </div>
-            <button class="btn btn-primary add-to-cart">Add to card</button>
-          </div> -->
-          </div>
-
+          <div class="viewCard"></div>
           <div class="cards"></div>
-
-          <!-- <div class="card">
-              <div class="card-image">
-                <img
-                  src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
-                  alt="Fjallraven Backpack"
-                />
-              </div>
-              <div class="card-content">
-                <h2 class="card-title">Fjallraven - Foldsack No. 1 Backpack</h2>
-                <p class="card-category">Category: Men's Clothing</p>
-                <p class="card-description">
-                  Your perfect pack for everyday use and walks in the forest.
-                  Stash your laptop (up to 15 inches) in the padded sleeve.
-                </p>
-                <div class="card-footer">
-                  <span class="card-price">$109.95</span>
-                  <div class="card-rating">
-                    <span>⭐ 3.9</span>
-                    <span>(120 reviews)</span>
-                  </div>
-                </div>
-              </div>
-            </div> -->
         </div>
       </div>
     </section>
