the last supper

--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/login.css" />
     <title>Login</title>
   </head>
@@ -22,22 +23,23 @@
     <div class="container">
       <div class="row">
         <div class="register">
-          <h1 style="font-weight: bold; font-size: 48px;">Login</h1>
-          <p class="titleLog">Nor again is there anyone who to enjoy a pleasure that 
-            or pursues or desires to obtain</p>
+          <h1 style="font-weight: bold; font-size: 48px">Login</h1>
+          <p class="titleLog">
+            Nor again is there anyone who to enjoy a pleasure that or pursues or
+            desires to obtain
+          </p>
           <form class="form">
             <div class="mb-3">
-              <label for="username" class="form-label" style="font-weight: bold;">Username</label>
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                required
-              />
+              <label for="username" class="form-label" style="font-weight: bold"
+                >Username</label
+              >
+              <input type="text" class="form-control" id="username" required />
             </div>
 
             <div class="mb-3">
-              <label for="password" class="form-label" style="font-weight: bold;">Password</label>
+              <label for="password" class="form-label" style="font-weight: bold"
+                >Password</label
+              >
               <input
                 type="password"
                 class="form-control"
@@ -45,9 +47,7 @@
                 required
               />
             </div>
-            <button type="submit" class="submit">
-              Login
-            </button>
+            <button type="submit" class="submit">Login</button>
             <div class="logNextReg">
               Don't have an account yet?
               <a href="register.html" class="linkReg"> Create now</a>
