--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -15,8 +15,9 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/register.css" />
-    <title style="font-weight: bold;">Create Account</title>
+    <title style="font-weight: bold">Create Account</title>
   </head>
   <body>
     <div class="container">
@@ -26,39 +27,19 @@
           <form class="form">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                required
-              />
+              <input type="text" class="form-control" id="name" required />
             </div>
             <div class="mb-3">
               <label for="surname" class="form-label">Surname</label>
-              <input
-                type="text"
-                class="form-control"
-                id="surname"
-                required
-              />
+              <input type="text" class="form-control" id="surname" required />
             </div>
             <div class="mb-3">
               <label for="username" class="form-label">Username</label>
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                required
-              />
+              <input type="text" class="form-control" id="username" required />
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                required
-              />
+              <input type="email" class="form-control" id="email" required />
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
@@ -69,9 +50,7 @@
                 required
               />
             </div>
-            <button type="submit" class="btn btn-danger submit">
-              Sign Up
-            </button>
+            <button type="submit" class="btn btn-danger submit">Sign Up</button>
             <div class="logNextReg">
               Have you already account?
               <a href="login.html" class="linkReg">Sign In</a>
