--- a/wishlist.html
+++ b/wishlist.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wishlist</title>
+    <!-- FONT AWESOME -->
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
   />
+  <!-- BOOTSTRAP -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <!-- TOASTIFY -->
   <link
     rel="stylesheet"
     type="text/css"
     href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
   />
+  <!-- CSS -->
+            <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/products.css">
     <link rel="stylesheet" href="./assets/css/wishlist.css"/>
   </head>
   <body>
-
-
     <header id="start">
       <div class="container">
         <div class="row">
@@ -81,7 +84,6 @@
         </nav>
       </div>
     </div>
-    
 
     <section id="headAreaProduct">
       <div class="container">
@@ -95,14 +97,6 @@
           </div>
         </div>
       </div>  
-
-
-
-
-
-
-
-    
     <main>
       <section class="wishlist-container">
         <div class="container">
@@ -113,10 +107,6 @@
         </div>
       </section>
     </main>
-
-
-
-
     <footer>
       <div class="container">
         <div class="row">
@@ -209,19 +199,15 @@
       </section>
     </footer>
 
-
-
-
-
-
-
-
+    <!-- TOASTIFY -->
     <script
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/toastify-js"
   ></script>
+  <!-- BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+  <!-- SCRIPTS -->
       <script src="./assets/js/wishlist.js"></script>
   </body>
 </html>
