the last supper

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             Featured Products
           </h1>
           <div class="col-lg-6 col-md-12 col-sm-12 textLeft">
-            <a href="products.html" class="allProduct">
+            <a href="" class="allProduct">
               View all products <i class="fa-solid fa-chevron-right"></i>
             </a>
           </div>
