--- a/product-detail.html
+++ b/product-detail.html
@@ -22,7 +22,6 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/products.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/product_detail.css" />
   </head>
@@ -133,7 +132,9 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="product-container"></div>
+          <div class="product-container">
+            
+          </div>
         </div>
       </div>
 
